# randomfail

./: .dockerignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  docker-publish.yml
randomfail/: values.yaml
randomfail-chart/: Chart.yaml  readme.md  values.yaml
randomfail-chart/templates/: deployment.yaml
templates/: index.html
tests/: test_main.py
